# dynamic_services_derive

./: Cargo.toml  README.md
src/: lib.rs
