[package]
name = "dynamic_services_derive"
version = "0.1.3"
edition = "2021"
license = "Apache-2.0"
authors = ["David Bosschaert <david.bosschaert@gmail.com>"]
repository = "https://github.com/roesti-rs/dynamic_services_derive"
description = "A dynamic services injection framework implemented as macros."

[lib]
proc-macro = true

[dependencies]
once_cell = "1.20"
syn = { version = "2.0", features = [ "extra-traits", "full" ]}
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"

